istioctl/cmd/testdata/authz/converter/policy-destination-labels.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ClusterRbacConfig
metadata:
  name: default
spec:
  mode: 'ON_WITH_INCLUSION'
  inclusion:
    namespaces: ["default"]
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRole
metadata:
  name: role
  namespace: default
spec:
  rules:
  - services: ["productpage.default.svc.cluster.local"]
    methods: ["GET"]
    constraints:
    - key: "destination.labels[env]"
      values:
      - "env1"
      - "env2"
    - key: "destination.labels[tag]"
      values:
      - "tag1"
      - "tag2"
    - key: "destination.labels[machine]"
      values:
      - "machine1"
      - "machine2"
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRoleBinding
metadata:
  name: binding
  namespace: default
spec:
  subjects:
  - user: "user"
  roleRef:
    kind: ServiceRole
    name: "role"
